# homework-3-group-4

./: .gitignore  README.md  a.py  citations.txt  group4_hw3_demo.webm  sample_cartesian_req  sample_planning_scene  sample_pose  sample_req  saved_plans.pkl  service_example  service_example_1  test_pose.py
object_mover/: package.xml  setup.py
object_mover/launch/: object_mover.launch.py
object_mover/object_mover/: MotionPlanner.py  MotionPlanningInerface.py  MotionPlanningInterface.py  PlanningScene.py  RobotState.py  UserNode.py  __init__.py  inspector.py  pick_node.py  planning_scene  utils.py
object_mover/test/: test_pose.py  test_pose_fail.py
object_mover_interfaces/: CMakeLists.txt  package.xml
object_mover_interfaces/srv/: AddBox.srv  CartesianPathRequest.srv  FrankaJointRequest.srv  FrankaPoseRequest.srv  GripperRequest.srv  PickPose.srv  TestPlanningScene.srv
